refactor: Replace deprecated references to Class#newInstance()
Co-authored-by: Moderne <team@moderne.io>